--- a/index.html
+++ b/index.html
@@ -419,10 +419,12 @@
 
   const W = preview.width, H = preview.height;
   const cx = W*0.5, cy = H*0.5;
-  const R  = Math.min(W,H)*0.42;             // visual radius inside the box
-  const Rp = Math.max(64, Math.floor(R*2));  // render resolution (kept modest for phones)
+  const R  = Math.min(W,H)*0.42;
 
-  // Offscreen buffer for crisp scaling (true sphere shading)
+  // Render resolution for the preview sphere (higher = smoother, still fast because preview is small)
+  const Rp = Math.max(180, Math.min(320, Math.floor(R*4.0)));
+
+  // Offscreen buffer for crisp scaling
   if (!drawSphere._buf || drawSphere._buf.width !== Rp || drawSphere._buf.height !== Rp){
     drawSphere._buf = document.createElement('canvas');
     drawSphere._buf.width = Rp;
@@ -433,42 +435,186 @@
   const buf = drawSphere._buf, bctx = drawSphere._bctx, img = drawSphere._img;
   const data = img.data;
 
-  // Colors derived from seed (stable)
-  const h = (seed % 360);
-  const baseA = hslToRgb(h, 0.72, isStar ? 0.58 : 0.46);
-  const baseB = hslToRgb((h+40)%360, 0.70, isStar ? 0.62 : 0.52);
-  const baseC = hslToRgb((h+220)%360, 0.65, isStar ? 0.52 : 0.40);
+  // -------- Texture atlas per body (built once per selection; sampled every frame) --------
+  if (!drawSphere._texCache) drawSphere._texCache = new Map();
 
-  // Deterministic 2D noise (fast)
-  function hash2(x,y){
-    // integer hash
-    let n = (x*374761393 + y*668265263 + seed*1442695041) | 0;
-    n = (n ^ (n >>> 13)) | 0;
-    n = (n * 1274126177) | 0;
-    return ((n ^ (n >>> 16)) >>> 0) / 4294967295;
-  }
+  function clamp01(x){ return x<0?0:(x>1?1:x); }
   function lerp(a,b,t){ return a + (b-a)*t; }
-  function smooth(t){ return t*t*(3-2*t); }
-  function noise(x,y){
-    const x0 = Math.floor(x), y0 = Math.floor(y);
-    const x1 = x0+1, y1 = y0+1;
-    const sx = smooth(x - x0), sy = smooth(y - y0);
-    const n00 = hash2(x0,y0), n10 = hash2(x1,y0);
-    const n01 = hash2(x0,y1), n11 = hash2(x1,y1);
-    return lerp( lerp(n00,n10,sx), lerp(n01,n11,sx), sy );
-  }
-  function fbm(x,y){
-    let v=0, a=0.55, f=1.0;
-    for (let i=0;i<5;i++){
-      v += a * noise(x*f, y*f);
-      f *= 2.0;
-      a *= 0.5;
+
+  function getTexture(seed, isStar){
+    const key = seed + "|" + (isStar?1:0);
+    if (drawSphere._texCache.has(key)) return drawSphere._texCache.get(key);
+
+    const tw = 256, th = 128; // equirectangular texture size (balanced quality vs speed)
+    const tex = new Uint8ClampedArray(tw*th*4);
+
+    const h = (seed % 360);
+    const baseA = hslToRgb(h, 0.72, isStar ? 0.58 : 0.46);
+    const baseB = hslToRgb((h+40)%360, 0.70, isStar ? 0.62 : 0.52);
+    const baseC = hslToRgb((h+220)%360, 0.65, isStar ? 0.52 : 0.40);
+
+    // Fast deterministic value-noise + fbm (only used during texture build)
+    function hash2(x,y){
+      let n = (x*374761393 + y*668265263 + (seed|0)*1442695041) | 0;
+      n = (n ^ (n >>> 13)) | 0;
+      n = (n * 1274126177) | 0;
+      return ((n ^ (n >>> 16)) >>> 0) / 4294967295;
     }
-    return v;
+    function smooth(t){ return t*t*(3-2*t); }
+    function noise(x,y){
+      const x0 = Math.floor(x), y0 = Math.floor(y);
+      const x1 = x0+1, y1 = y0+1;
+      const sx = smooth(x - x0), sy = smooth(y - y0);
+      const n00 = hash2(x0,y0), n10 = hash2(x1,y0);
+      const n01 = hash2(x0,y1), n11 = hash2(x1,y1);
+      return lerp( lerp(n00,n10,sx), lerp(n01,n11,sx), sy );
+    }
+    function fbm(x,y){
+      let v=0, a=0.55, f=1.0;
+      for (let i=0;i<6;i++){
+        v += a * noise(x*f, y*f);
+        f *= 2.02;
+        a *= 0.52;
+      }
+      return v;
+    }
+
+    function wrap01(u){
+      u = u - Math.floor(u);
+      return u<0 ? u+1 : u;
+    }
+
+    for (let j=0;j<th;j++){
+      const v0 = j/(th-1);                 // 0..1
+      const lat = (v0-0.5)*Math.PI;        // -pi/2..pi/2
+      const latAbs = Math.abs(Math.sin(lat));
+      for (let i=0;i<tw;i++){
+        const u0 = i/(tw-1);               // 0..1
+
+        // Domain warp to kill "squarey" artifacts and make coastlines organic
+        const w1 = fbm(u0*2.2 + 19.3, v0*2.2 + 77.1);
+        const w2 = fbm(u0*2.2 + 81.7, v0*2.2 + 11.8);
+        const uu = wrap01(u0 + (w1-0.5)*0.10);
+        const vv = clamp01(v0 + (w2-0.5)*0.10);
+
+        let r=0,g=0,b=0,a=0;
+
+        if (!isStar){
+          // Elevation (continents/oceans)
+          const n = fbm(uu*3.6, vv*3.6);
+          const m = fbm(uu*8.4 + 12.3, vv*8.4 + 4.7);
+          const elev = (n*0.72 + m*0.28) - 0.50; // <0 ocean
+
+          const ocean = elev < 0;
+          a = ocean ? 255 : 0; // ocean mask in alpha (used for specular)
+
+          // Land tone varies with elev + latitude (gives nicer gradients)
+          const landMix = clamp01(elev*2.35);
+          const latTint = clamp01((latAbs - 0.10) / 0.70);
+
+          const landR = lerp(baseA[0], baseB[0], landMix*0.75 + latTint*0.25);
+          const landG = lerp(baseA[1], baseB[1], landMix*0.65 + latTint*0.20);
+          const landB = lerp(baseA[2], baseB[2], landMix*0.70 + latTint*0.15);
+
+          const oceanR = baseC[0]*0.72;
+          const oceanG = baseC[1]*0.72;
+          const oceanB = baseC[2]*0.92;
+
+          r = ocean ? oceanR : landR;
+          g = ocean ? oceanG : landG;
+          b = ocean ? oceanB : landB;
+
+          // Ice caps (clean, non-blocky)
+          const ice = clamp01((Math.abs(Math.sin(lat)) - 0.78)/0.14);
+          if (ice > 0){
+            const t = ice;
+            r = lerp(r, 235, t);
+            g = lerp(g, 245, t);
+            b = lerp(b, 255, t);
+            a = 0; // ice isn't glossy like ocean
+          }
+
+          // Clouds (soft)
+          const c = fbm(uu*12.0 + 40.0, vv*12.0 + 90.0);
+          const cloud = clamp01((c - 0.64) * 2.6);
+          if (cloud > 0){
+            const t = cloud * 0.55;
+            r = lerp(r, 245, t);
+            g = lerp(g, 250, t);
+            b = lerp(b, 255, t);
+          }
+
+        } else {
+          // Star bands + granulation
+          const band = 0.5 + 0.5*Math.sin((v0*2*Math.PI)*6 + (u0*2*Math.PI)*0.35 + seed*0.01);
+          const gran = fbm(uu*18.0 + 200.0, vv*18.0 + 500.0);
+          const t = 0.35*band + 0.65*gran;
+
+          r = lerp(baseA[0], baseB[0], t);
+          g = lerp(baseA[1], baseB[1], t);
+          b = lerp(baseA[2], baseB[2], t);
+
+          const hot = clamp01((fbm(uu*6.0 + 7.7, vv*6.0 + 2.3) - 0.72) * 3.2);
+          if (hot > 0){
+            r = lerp(r, 255, hot*0.55);
+            g = lerp(g, 235, hot*0.45);
+            b = lerp(b, 200, hot*0.35);
+          }
+        }
+
+        const k = (j*tw + i)*4;
+        tex[k+0] = r|0;
+        tex[k+1] = g|0;
+        tex[k+2] = b|0;
+        tex[k+3] = a|0;
+      }
+    }
+
+    const out = { w: tw, h: th, tex };
+    drawSphere._texCache.set(key, out);
+    return out;
   }
 
-  // Rotation around the vertical axis (spinning-top behavior)
-  // Positive rotation moves surface left-to-right (eastward) by using -rot in mapping.
+  function sampleTex(texObj, u, v){
+    // Bilinear sample from equirectangular texture
+    const tw = texObj.w, th = texObj.h, t = texObj.tex;
+    u = u - Math.floor(u); // wrap horizontally
+    if (u < 0) u += 1;
+    v = v < 0 ? 0 : (v > 0.999999 ? 0.999999 : v);
+
+    const x = u*(tw-1), y = v*(th-1);
+    const x0 = Math.floor(x), y0 = Math.floor(y);
+    const x1 = (x0 + 1) % tw;
+    const y1 = Math.min(th-1, y0 + 1);
+    const tx = x - x0, ty = y - y0;
+
+    const i00 = (y0*tw + x0)*4;
+    const i10 = (y0*tw + x1)*4;
+    const i01 = (y1*tw + x0)*4;
+    const i11 = (y1*tw + x1)*4;
+
+    // r,g,b,a (a = ocean mask)
+    const r0 = lerp(t[i00], t[i10], tx);
+    const g0 = lerp(t[i00+1], t[i10+1], tx);
+    const b0 = lerp(t[i00+2], t[i10+2], tx);
+    const a0 = lerp(t[i00+3], t[i10+3], tx);
+
+    const r1 = lerp(t[i01], t[i11], tx);
+    const g1 = lerp(t[i01+1], t[i11+1], tx);
+    const b1 = lerp(t[i01+2], t[i11+2], tx);
+    const a1 = lerp(t[i01+3], t[i11+3], tx);
+
+    return [
+      lerp(r0, r1, ty),
+      lerp(g0, g1, ty),
+      lerp(b0, b1, ty),
+      lerp(a0, a1, ty)
+    ];
+  }
+
+  const texObj = getTexture(seed, isStar);
+
+  // Rotation: surface spins around fixed vertical axis (spinning top behavior)
   const cr = Math.cos(-rot), sr = Math.sin(-rot);
 
   // Fixed light direction (lighting does NOT spin with the surface)
@@ -476,9 +622,8 @@
   const lLen = Math.hypot(lx,ly,lz);
   const Lx = lx/lLen, Ly = ly/lLen, Lz = lz/lLen;
 
-  // Render into buffer (Rp x Rp), then scale into the preview box
   for (let j=0;j<Rp;j++){
-    const vy = (j/(Rp-1))*2 - 1; // -1..1
+    const vy = (j/(Rp-1))*2 - 1;
     for (let i=0;i<Rp;i++){
       const vx = (i/(Rp-1))*2 - 1;
       const rr = vx*vx + vy*vy;
@@ -493,127 +638,54 @@
       const vz = Math.sqrt(1.0 - rr);
       const nx = vx, ny = vy, nz = vz;
 
-      // Rotate the *surface coordinates* around Y (spinning top axis)
+      // Rotate surface coordinates around Y
       const rx = cr*nx + sr*nz;
       const rz = -sr*nx + cr*nz;
 
-      // lon/lat for texture mapping
-      const lon = Math.atan2(rz, rx);               // -pi..pi
-      const lat = Math.asin(Math.max(-1, Math.min(1, ny))); // -pi/2..pi/2
-
-      // Texture coordinates (0..1)
+      // lon/lat
+      const lon = Math.atan2(rz, rx);                 // -pi..pi
+      const lat = Math.asin(Math.max(-1, Math.min(1, ny)));
       const u = (lon / (2*Math.PI)) + 0.5;
       const v = (lat / Math.PI) + 0.5;
 
-      // Procedural surface
-      // Planet: continents/oceans + clouds; Star: bands + granulation
-      let r=0,g=0,b=0;
-
-      if (!isStar){
-        // Continents (fbm) and oceans
-        const n = fbm(u*3.2, v*3.2);
-        const m = fbm(u*8.0 + 12.3, v*8.0 + 4.7);
-        const elev = (n*0.75 + m*0.25) - 0.48;      // roughly -0.5..0.5
-        const ocean = elev < 0;
-
-        // Base albedo
-        const landMix = Math.min(1, Math.max(0, elev*2.2));
-        const o = ocean ? 1 : 0;
-
-        // Ocean color from baseC; land from baseA/baseB blend
-        const landR = lerp(baseA[0], baseB[0], landMix);
-        const landG = lerp(baseA[1], baseB[1], landMix);
-        const landB = lerp(baseA[2], baseB[2], landMix);
-
-        const oceanR = baseC[0]*0.75;
-        const oceanG = baseC[1]*0.75;
-        const oceanB = baseC[2]*0.92;
-
-        r = o ? oceanR : landR;
-        g = o ? oceanG : landG;
-        b = o ? oceanB : landB;
-
-        // Ice caps
-        const ice = Math.max(0, (Math.abs(ny) - 0.72) / 0.18);
-        if (ice > 0){
-          const t = Math.min(1, ice);
-          r = lerp(r, 235, t);
-          g = lerp(g, 245, t);
-          b = lerp(b, 255, t);
-        }
-
-        // Subtle clouds (brighter, semi-random, higher latitude preference)
-        const c = fbm(u*10.0 + 40.0, v*10.0 + 90.0);
-        const cloud = Math.max(0, c - 0.63) * 2.2;
-        if (cloud > 0){
-          const t = Math.min(1, cloud) * 0.55;
-          r = lerp(r, 245, t);
-          g = lerp(g, 250, t);
-          b = lerp(b, 255, t);
-        }
-
-      } else {
-        // Star bands + granulation
-        const band = 0.5 + 0.5*Math.sin((v*2*Math.PI)*6 + (u*2*Math.PI)*0.35 + seed*0.01);
-        const gran = fbm(u*18.0 + 200.0, v*18.0 + 500.0);
-        const t = 0.35*band + 0.65*gran;
-        r = lerp(baseA[0], baseB[0], t);
-        g = lerp(baseA[1], baseB[1], t);
-        b = lerp(baseA[2], baseB[2], t);
-
-        // Hotspots
-        const hot = Math.max(0, fbm(u*6.0 + 7.7, v*6.0 + 2.3) - 0.70) * 3.0;
-        if (hot > 0){
-          const ht = Math.min(1, hot);
-          r = lerp(r, 255, ht*0.55);
-          g = lerp(g, 235, ht*0.45);
-          b = lerp(b, 200, ht*0.35);
-        }
-      }
+      // Sample albedo + ocean mask
+      const samp = sampleTex(texObj, u, v);
+      let r = samp[0], g = samp[1], b = samp[2];
+      const oceanMask = samp[3] / 255.0;
 
       // Lighting
       const ndl = Math.max(0, nx*Lx + ny*Ly + nz*Lz);
       const ambient = isStar ? 0.55 : 0.28;
       const diff = (isStar ? 0.55 : 0.78) * ndl;
 
-      // Specular (stronger on oceans / stars)
-      const vxv = 0, vyv = 0, vzv = 1; // view dir
-      // half vector
-      const hx = Lx + vxv, hy = Ly + vyv, hz = Lz + vzv;
+      // Specular
+      const hx = Lx, hy = Ly, hz = Lz + 1; // half-vector approx (view dir = +Z)
       const hL = Math.hypot(hx,hy,hz);
       const Hx = hx/hL, Hy = hy/hL, Hz = hz/hL;
       const ndh = Math.max(0, nx*Hx + ny*Hy + nz*Hz);
-      const shin = isStar ? 32 : 52;
-      let spec = Math.pow(ndh, shin) * (isStar ? 0.35 : 0.22);
-
-      // Ocean boost
-      if (!isStar){
-        const n = fbm(u*3.2, v*3.2);
-        const m = fbm(u*8.0 + 12.3, v*8.0 + 4.7);
-        const elev = (n*0.75 + m*0.25) - 0.48;
-        if (elev < 0) spec *= 1.9;
-      }
+      const shin = isStar ? 34 : 60;
+      let spec = Math.pow(ndh, shin) * (isStar ? 0.35 : 0.18);
+      if (!isStar) spec *= (0.6 + 1.6*oceanMask); // oceans glint more
 
       // Limb darkening for depth
-      const limb = Math.pow(Math.max(0, nz), isStar ? 0.55 : 0.85);
+      const limb = Math.pow(Math.max(0, nz), isStar ? 0.55 : 0.90);
+      const lit = (ambient + diff) * limb;
 
-      let lit = (ambient + diff) * limb;
       r = r*lit + 255*spec;
       g = g*lit + 255*spec;
       b = b*lit + 255*spec;
 
       // Atmosphere rim (planets only)
       if (!isStar){
-        const rim = Math.pow(1.0 - nz, 2.2);
-        r = r + 40*rim;
-        g = g + 80*rim;
-        b = b + 120*rim;
+        const rim = Math.pow(1.0 - nz, 2.3);
+        r += 35*rim;
+        g += 75*rim;
+        b += 120*rim;
       }
 
-      // Clamp
-      data[idx+0] = Math.max(0, Math.min(255, r))|0;
-      data[idx+1] = Math.max(0, Math.min(255, g))|0;
-      data[idx+2] = Math.max(0, Math.min(255, b))|0;
+      data[idx+0] = r<0?0:(r>255?255:r)|0;
+      data[idx+1] = g<0?0:(g>255?255:g)|0;
+      data[idx+2] = b<0?0:(b>255?255:b)|0;
       data[idx+3] = 255;
     }
   }
@@ -628,18 +700,21 @@
   ctx.fillStyle = bg;
   ctx.fillRect(0,0,W,H);
 
-  // Draw sphere buffer scaled with smoothing
+  // Draw sphere buffer scaled (high smoothing + a tiny blur to remove any residual pixelation)
   ctx.save();
   ctx.imageSmoothingEnabled = true;
+  ctx.imageSmoothingQuality = 'high';
   ctx.translate(cx, cy);
   ctx.beginPath();
   ctx.arc(0,0,R,0,Math.PI*2);
   ctx.closePath();
   ctx.clip();
+  ctx.filter = 'blur(0.35px)';
   ctx.drawImage(buf, -R, -R, R*2, R*2);
+  ctx.filter = 'none';
   ctx.restore();
 
-  // Outer rim + shadow for premium feel
+  // Outer rim + shadow
   ctx.save();
   const rim = ctx.createRadialGradient(cx- R*0.2, cy- R*0.25, R*0.2, cx, cy, R*1.05);
   rim.addColorStop(0.0, "rgba(255,255,255,0.18)");
@@ -649,7 +724,7 @@
   ctx.beginPath(); ctx.arc(cx, cy, R*1.02, 0, Math.PI*2); ctx.fill();
   ctx.restore();
 
-  // Small glint
+  // Glint
   ctx.save();
   ctx.globalAlpha = isStar ? 0.25 : 0.18;
   ctx.fillStyle = "rgba(255,255,255,0.9)";
